Improve install animation colors. Fix warning background overflow (#1058)
* Improve animation colors; fix warning bg overflow

* Update color

* Update changelogs

* Update color to shade of primary

* Update Changelog.minor.md

--- a/resources/css/launcher.scss
+++ b/resources/css/launcher.scss
@@ -135,10 +135,11 @@ body {
     .alert-icon-bg {
         position: absolute;
         width: 8px;
-        height: 12px;
-        top: 32px;
+        height: 10px;
+        top: 34px;
         left: 34px;
         background-color: white;
+        border-radius: 50%;
     }
 }
 
